--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     
+    <button onclick="alert('Вы нажали на меня')">Нажми на меня</button>
+
     <script src="js/main.js"></script>
 </body>
 </html>
