--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <button onclick="onClickButton()">Нажми на меня</button>
+    <button onmouseover="onClickButton()">Нажми на меня</button>
 
     <script src="js/main.js"></script>
 </body>
