--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     
-    <button onclick="onClickButton(this)">Нажми на меня</button>
+    <button name="mainButton" onclick="onClickButton(this)">Нажми на меня</button>
+
+    <input oninput="onInput(this)">
 
     <script src="js/main.js"></script>
 </body>
