--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     
-    <button name="mainButton" onclick="onClickButton(this)">Нажми на меня</button>
-
-    <input oninput="onInput(this)">
+    <p id="text" title="Same text">Text</p>
 
     <script src="js/main.js"></script>
 </body>
