--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     
     <p id="text" title="Same text">Text</p>
 
+    <span>Text 1</span>
+    <span>Text 2</span>
+    <span>Text 3</span>
+
     <script src="js/main.js"></script>
 </body>
 </html>
