--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     <p id="text" title="Same text">Text</p>
 
-    <span>Text 1</span>
-    <span>Text 2</span>
-    <span>Text 3</span>
+    <span class="simple-text">Text 1</span>
+    <span class="simple-text">Text 2</span>
+    <span class="simple-text">Text 3</span>
 
     <script src="js/main.js"></script>
 </body>
