--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 </head>
 <body>
     
-    <p id="text" title="Same text">Text</p>
-
-    <span class="simple-text">Text 1</span>
-    <span class="simple-text">Text 2</span>
-    <span class="simple-text">Text 3</span>
+    <form id="main-form">
+        <label for="name">Имя:</label>
+        <input type="text" name="name" placeholder="Имя" id="name"><br><br>
+        <label for="password">Пароль:</label>
+        <input type="password" name="pass" placeholder="Пароль" id="pass"><br><br>
+        <label for="repass">Проверка пароля:</label>
+        <input type="password" name="repass" placeholder="Проверка пароля" id="repass"><br><br>
+        <span>Пол:</span>
+        <input type="radio" name="state" id="male" value="Мужской">
+        <label for="male">Мужской</label>
+        <input type="radio" name="state" id="female" value="Женский">
+        <label for="female">Женский</label><br><br>
+        <input type="button" name="submit" value="Готово">
+    </form>
 
     <script src="js/main.js"></script>
 </body>
