tracking shipment data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <form id="main-form">
+    <form id="main-form" onsubmit="return checkForm(this)" method="post">
         <label for="name">Имя:</label>
         <input type="text" name="name" placeholder="Имя" id="name"><br><br>
         <label for="password">Пароль:</label>
@@ -21,7 +21,7 @@
         <label for="male">Мужской</label>
         <input type="radio" name="state" id="female" value="Женский">
         <label for="female">Женский</label><br><br>
-        <input type="button" name="submit" value="Готово">
+        <input type="submit" name="submit" value="Готово">
     </form>
 
     <script src="js/main.js"></script>
