--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <label for="male">Мужской</label>
         <input type="radio" name="state" id="female" value="Женский">
         <label for="female">Женский</label><br><br>
+        <div id="error" style="color: red"></div>
         <input type="submit" name="submit" value="Готово">
     </form>
 
