--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <form id="main-form" onsubmit="return checkForm(this)" method="post">
+    <form id="main-form" method="post">
         <label for="name">Имя:</label>
         <input type="text" name="name" placeholder="Имя" id="name"><br><br>
         <label for="password">Пароль:</label>
